--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-select": "^5.9.0",
     "react-slick": "^0.30.3",
     "react-slideshow-image": "^4.3.2",
+    "react-toastify": "^11.0.2",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.15"
